--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-API_URL=http://localhost:3100/api
+VITE_API_URL=http://161.132.37.75:3100/api
+VITE_URL_REPORT=http://161.132.37.75:3150/reports
+
+#VITE_API_URL=http://localhost:3100/api
+#VITE_URL_REPORT=http://localhost:3150/reports
+VITE_URL_WEB=http://161.132.37.75:8084
